# PrimaryEngine

./: .gitignore  .gitmodules  CMakeLists.txt  PrimaryEngine.code-workspace  build.sh  imgui.ini
include/: resource_manager.hpp  utils.hpp
include/graphics/: default_shader_data.hpp  font.hpp  image.hpp  index_buffer.hpp  primitives.hpp  renderer.hpp  shader.hpp
include/misc/: shape2d.hpp
include/nodes/: label.hpp  node2d.hpp  node_utils.hpp  sprite.hpp  transform3d.hpp
include/sources/: input.hpp  node_includes.hpp  prim_exception.hpp
include/sources/graphics/: default_texture_data.hpp  mesh.hpp  texture.hpp  vertex_buffer_layout.hpp
include/sources/nodes/: label.hpp  node.hpp  node_base.hpp
include/src/: scene_manager.hpp
include/src/graphics/: image_utils.hpp
include/src/nodes/: node.hpp  node_factory.hpp  sprite.hpp  transform2d.hpp
res/scenes/: TestScene1.psc  TestScene2.psc  TestScene3.psc  testSceneSprite1.psc
res/shaders/: default.shader  select.shader
resources/scenes/: TestScene1.psc  TestScene2.psc  TestScene4.psc
src/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  app_status.hpp  event.hpp  globals.hpp  index_buffer.cpp  index_buffer.hpp  input.cpp  input.hpp  input_util.hpp  logger.cpp  logger.hpp  macros.hpp  main.cpp  mesh.hpp  mesh_composition.hpp  model.hpp  node_includes.hpp  prim_exception.hpp  primary_app.cpp  primary_app.hpp  primary_app_options.hpp  renderer.cpp  renderer.hpp  resource_manager.cpp  resource_manager.hpp  scene_editor.cpp  scene_editor.hpp  scene_manager.cpp  scene_manager.hpp  shader.cpp  shader.hpp  test_scenes_creator.hpp  texture.cpp  texture.hpp  typedefs.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp  (+7 more)
src/graphics/: default_shader_data.hpp  default_texture_data.hpp  font.cpp  font.hpp  glfw_extensions.cpp  glfw_extensions.hpp  image.cpp  image.hpp  image_utils.hpp  index_buffer.cpp  index_buffer.hpp  mesh.cpp  mesh.hpp  mesh_composition.hpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_factory.cpp  shader_factory.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
src/misc/: rectangle.cpp  rectangle.hpp  shape2d.hpp
src/nodes/: actor_camera2d.cpp  actor_camera2d.hpp  button.cpp  button.hpp  camera2d.cpp  camera2d.hpp  camera_base.cpp  camera_base.hpp  control.cpp  control.hpp  control_transform.hpp  drawable.cpp  drawable.hpp  label.cpp  label.hpp  node.cpp  node.hpp  node.tpp  node2d.cpp  node2d.hpp  node_base.cpp  node_base.hpp  node_factory.hpp  node_includes.hpp  node_path.cpp  node_path.hpp  node_serialization.hpp  node_serializer.hpp  node_utils.hpp  panel.cpp  panel.hpp  signal.hpp  sprite.cpp  sprite.hpp  transform2d.hpp  transform3d.hpp
test_project/: CMakeLists.txt  build.sh
test_project/project/: CMakeLists.txt  build.sh
test_project/project/resources/scenes/: TestScene4.psc
test_project/project/src/: main.cpp  test_scenes_creator.hpp
test_project/resources/scenes/: LargeShip.psc  TestSceneShip.psc
test_project/src/: main.cpp  test_scenes_creator.hpp
